<resources>
    <string name="app_name">Female Fitness</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_widget">Add widget</string>
    <string name="slogo">Keep Your Body Fit</string>
    <string name="YoutubeViewDescription">This is a YoutubePlayerView to display exercise video</string>
    <string name="button_favorite_description">This button to add or delete exercise from favorites</string>
    <string name="logo_image_desc">This is a logo image</string>
    <string name="menu_desc">This is a menu</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="your_favorite_workouts">Your Favorite Workouts</string>
    <string name="favorite_exercises">Favorite Exercises</string>
    <string name="all_exercises">All Exercises</string>
    <string name="log_out">Log Out</string>
</resources>
